clusters/main/kubernetes/network/gateway-api/app/gatewayclass-cilium.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
  description: Cilium GatewayClass for shared internal gateway routing
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    namespace: gateway
    name: cilium
